z-index fixed

--- a/css/support.css
+++ b/css/support.css
@@ -2,7 +2,7 @@
 .modal {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
+	z-index: 9998; /* Sit on top */
 	padding-top: 70px; /* Location of the box */
 	left: 0;
 	top: 0;
